# maze-mansion

./: package-lock.json  package.json  readme.md
client/: package-lock.json  package.json  tsconfig.json
client/src/: AScApi.ts  ApiService.ts  ApiTypes.ts  App.css  App.less  App.tsx  AsmApi.ts  Dashboard.tsx  Dashboard2.tsx  DashboardJS.tsx  JsApi.ts  Maze.css  Maze.tsx  MazeService.ts  Settings.css  Settings.less  Settings.tsx  WasmApi.ts  index.css
client/src/Components/: Dashboard.tsx  index.ts
client/src/Contexts/: index.ts  lang.context.ts  settings.context.ts
client/src/MazeComp/: Commands.css  Commands.less  Commands.tsx  Grid.tsx  GridWasm.tsx  Maze.css  Maze.less  Maze.tsx  Maze2.tsx  MazeJS.tsx  MazeUtils.ts  MazeUtilsWasm.ts
client/src/Mocks/: api.mock.ts  index.ts  lang.mock.ts  settings.mock.ts
client/src/Services/: index.ts  lang.service.ts  wasm.service.ts
client/src/Types/: api.type.ts  (+4 more)
public/: rs
scripts/: build.sh
server/: app.ts  index.js  package-lock.json  package.json  router.js  router.ts  tsconfig.json
server/controllers/: src.js
server/models/: index.js  model.js
server/src/: router.ts
server/text/: english.ts  index.ts  japanese.ts
server/wasm/: index.js
server/wasm/rs/: Cargo.toml
server/wasm/rs/src/: lib.rs  maze_utils.rs  rbt.rs  utils.rs
src/: App.less  App.tsx  Dashboard.tsx  WasmApi.ts
src/MazeComp/: Grid.tsx  Maze.tsx
src/Services/: index.ts  wasm.service.ts
src/SettingsComp/: SpeedSetting.tsx
src/Types/: index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  maze_descriptor.rs  maze_utils.rs  rand.rs
(+87 files in other folders)
