[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"

[lib]
crate-type = ["cdylib", "rlib"]